maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:2: error: not found: value x
override def run() {while (!isOverBaggle()) {x=random3();
                                             ^RandomMouseMaze:3: error: not found: value x
                                             x match 
                                             ^